# reachmydevice

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  NOTICE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
apps/host/: Cargo.toml
apps/host/src/: main.rs  service.rs  tray.rs
apps/rendezvous/: Cargo.toml
apps/rendezvous/migrations/: 0001_init.sql  0002_settings.sql  0003_webauthn.sql
apps/rendezvous/src/: api.rs  auth.rs  config.rs  console.html  db.rs  error.rs  landing.html  lib.rs  main.rs  resolver.rs  security.rs  signaling.rs  throttle.rs  webauthn.rs
apps/rendezvous/tests/: relay_smoke.rs
apps/signal-dev/: Cargo.toml
apps/signal-dev/src/: main.rs
apps/viewer/: Cargo.toml
apps/viewer/src/: main.rs  shader.wgsl
apps/web-viewer/: Cargo.toml  index.html
apps/web-viewer/assets/: ext.js  manifest.webmanifest
apps/web-viewer/src/: input.rs  lib.rs  signaling.rs  swipe.rs
crates/capture/: Cargo.toml
crates/capture/examples/: audio_probe.rs  capture_smoke.rs
crates/capture/src/: lib.rs  linux.rs  mac.rs
crates/codec/: Cargo.toml
crates/codec/examples/: av1_bench.rs
crates/codec/src/: audio.rs  av1.rs  lib.rs  scale.rs  software.rs
crates/entitlement/: Cargo.toml  README.md
crates/entitlement/src/: lib.rs
crates/input/: Cargo.toml
crates/input/examples/: input_smoke.rs
crates/input/src/: keymap.rs  lib.rs  linux.rs  mac.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: openreach.proto  rmd.proto
crates/protocol/src/: lib.rs
crates/protocol/tests/: fuzz_smoke.rs
crates/session/: Cargo.toml
crates/session/examples/: audio_e2e.rs  headless_viewer.rs  rzv_relay_check.rs
crates/session/src/: account.rs  audio.rs  clipboard.rs  filexfer.rs  host.rs  identity.rs  lib.rs  pairing.rs  pairing_client.rs  power.rs  rendezvous.rs  settings.rs  signal.rs  viewer.rs
crates/session/tests/: audio_delivery.rs  filexfer_fuzz_smoke.rs  pairing_e2e.rs  pipeline.rs  rendezvous_e2e.rs
crates/transport/: Cargo.toml
crates/transport/src/: driver.rs  lib.rs
crates/transport/tests/: loopback.rs  relay_ciphertext.rs
deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  install-host.sh
deploy/fail2ban/: README.md
deploy/fail2ban/filter.d/: rmd-rendezvous.conf
deploy/fail2ban/jail.d/: rmd-rendezvous.conf
deploy/release/: README.md  build-linux.sh  build-macos.sh  common.sh  install.sh  openreach-minisign.pub  setup-keys.sh
deploy/service/: README.md  com.brainwires.openreach-host.plist  com.brainwires.rmd-host.plist  openreach-host.env.example  openreach-host.service  rmd-host.env.example  rmd-host.service
docs/: HACKING.md  architecture.md  decisions.md  macos-permissions.md  phase1-report.md  threat-model.md  unsafe-audit.md  validation.md  vps-deployment.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filexfer_handle.rs  protocol_decode.rs  relay_frame.rs
