# ReachMyDevice — cross-platform self-hostable remote KVM.
# Workspace root. See docs/architecture.md for the crate map.
[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/transport",
    "crates/capture",
    "crates/codec",
    "crates/input",
    "crates/session",
    "apps/host",
    "apps/viewer",
    "apps/signal-dev",
    "apps/rendezvous",
]
# The vendored webrtc-rs-rtc fork (git submodule) is its own workspace; keep it
# out of ours so Cargo treats it as a path dependency, not a member.
# apps/web-viewer is a wasm-only cdylib (web-sys/wgpu) built with `trunk`, not the
# native `cargo build`, so it is excluded from this workspace too.
exclude = ["third_party", "apps/web-viewer"]

[workspace.package]
version = "0.2.8"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Brainwires/reachmydevice"
authors = ["Brainwires"]

# Shared dependency versions. Individual crates opt in via `foo.workspace = true`.
[workspace.dependencies]
# async runtime + utils
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
bytes = "1"
futures = "0.3"
# error handling
anyhow = "1"
thiserror = "2"
# logging / diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-build = "0.13"
# Pure-Rust protoc replacement (produces a FileDescriptorSet for prost-build).
protox = "0.7"
# internal crates
rmd-protocol = { path = "crates/protocol" }
rmd-transport = { path = "crates/transport" }
rmd-capture = { path = "crates/capture" }
rmd-codec = { path = "crates/codec" }
rmd-input = { path = "crates/input" }
rmd-session = { path = "crates/session" }

# Fast, small release binaries; keep debug symbols off the hot path.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# The spike measures latency; a lightly-optimized dev profile keeps it honest
# without paying full release build times during iteration.
[profile.dev]
opt-level = 1
