# ReachMyDevice — cross-platform self-hostable remote KVM.
# Workspace root. See docs/architecture.md for the crate map.
[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/transport",
    "crates/capture",
    "crates/codec",
    "crates/input",
    "crates/session",
    "crates/entitlement",
    "apps/host",
    "apps/viewer",
    "apps/signal-dev",
    "apps/rendezvous",
]
# The vendored webrtc-rs-rtc fork (git submodule) is its own workspace; keep it
# out of ours so Cargo treats it as a path dependency, not a member.
# apps/web-viewer is a wasm-only cdylib (web-sys/wgpu) built with `trunk`, not the
# native `cargo build`, so it is excluded from this workspace too.
exclude = ["third_party", "apps/web-viewer"]

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
# Relicensed from "MIT OR Apache-2.0" at 0.2.16: internal/commercial self-hosting
# stays free, but offering the software as a hosted/managed service is not
# permitted (see LICENSE + NOTICE). Prior releases remain MIT/Apache.
license = "Elastic-2.0"
repository = "https://github.com/Brainwires/reachmydevice"
authors = ["Brainwires"]

# Shared dependency versions. Individual crates opt in via `foo.workspace = true`.
[workspace.dependencies]
# async runtime + utils
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
bytes = "1"
futures = "0.3"
# error handling
anyhow = "1"
thiserror = "2"
# logging / diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-build = "0.13"
# Pure-Rust protoc replacement (produces a FileDescriptorSet for prost-build).
protox = "0.7"
# internal crates
rmd-protocol = { path = "crates/protocol" }
rmd-transport = { path = "crates/transport" }
rmd-capture = { path = "crates/capture" }
rmd-codec = { path = "crates/codec" }
rmd-input = { path = "crates/input" }
rmd-session = { path = "crates/session" }
# Relay-entitlement seam: the open-source default is `AllowAll`; a private plugin
# can inject a paid policy when composing the server (see apps/rendezvous).
rmd-entitlement = { path = "crates/entitlement" }

# Fast, small release binaries; keep debug symbols off the hot path.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# The spike measures latency; a lightly-optimized dev profile keeps it honest
# without paying full release build times during iteration.
[profile.dev]
opt-level = 1
