[package]
name = "openreach-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "openreach-host"
path = "src/main.rs"

[dependencies]
openreach-protocol.workspace = true
openreach-session.workspace = true
openreach-capture.workspace = true
openreach-codec.workspace = true
openreach-input.workspace = true
openreach-transport.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Scrub the device token from memory after use.
zeroize = "1"

# Optional desktop tray companion. Behind a feature so headless/server hosts
# (which have no display and often no GTK) build without pulling GTK/winit.
tray-icon = { version = "0.24", optional = true }
winit = { version = "0.30", optional = true }

[features]
# Build the desktop tray companion (`OPENREACH_TRAY=1` then activates it).
tray = ["dep:tray-icon", "dep:winit"]
