[package]
name = "openreach-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenReach host agent — end-to-end-encrypted remote-desktop host (screen capture, input injection, WebRTC)."
repository.workspace = true

# Debian package: `cargo deb -p openreach-host`. Ships the binary + docs; the
# systemd unit is a per-user service (see deploy/service/), installed by
# deploy/install-host.sh rather than system-wide.
[package.metadata.deb]
maintainer = "Brainwires <viipe.com@gmail.com>"
section = "net"
priority = "optional"
extended-description = """\
OpenReach is a self-hostable, end-to-end-encrypted remote desktop / KVM-over-IP \
system. This package installs the host agent (the machine you connect to). After \
install, run `openreach-host` or set up the per-user service with \
deploy/install-host.sh."""

[[bin]]
name = "openreach-host"
path = "src/main.rs"

[dependencies]
openreach-protocol.workspace = true
openreach-session.workspace = true
openreach-capture.workspace = true
openreach-codec.workspace = true
openreach-input.workspace = true
openreach-transport.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Scrub the device token from memory after use.
zeroize = "1"

# Optional desktop tray companion. Behind a feature so headless/server hosts
# (which have no display and often no GTK) build without pulling GTK/winit.
tray-icon = { version = "0.24", optional = true }
winit = { version = "0.30", optional = true }

[features]
# Build the desktop tray companion (`OPENREACH_TRAY=1` then activates it).
tray = ["dep:tray-icon", "dep:winit"]
