[package]
name = "rmd-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ReachMyDevice host agent — end-to-end-encrypted remote-desktop host (screen capture, input injection, WebRTC)."
repository.workspace = true

# Debian package: `cargo deb -p rmd-host`. Ships the binary + docs; the
# systemd unit is a per-user service (see deploy/service/), installed by
# deploy/install-host.sh rather than system-wide.
[package.metadata.deb]
maintainer = "Brainwires <viipe.com@gmail.com>"
section = "net"
priority = "optional"
extended-description = """\
ReachMyDevice is a self-hostable, end-to-end-encrypted remote desktop / KVM-over-IP \
system. This package installs the host agent (the machine you connect to). After \
install, run `rmd-host` or set up the per-user service with \
deploy/install-host.sh."""

[[bin]]
name = "rmd-host"
path = "src/main.rs"

[dependencies]
rmd-protocol.workspace = true
rmd-session.workspace = true
rmd-capture.workspace = true
rmd-codec.workspace = true
rmd-input.workspace = true
rmd-transport.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Scrub the device token from memory after use.
zeroize = "1"

# Optional desktop tray companion. Behind a feature so headless/server hosts
# (which have no display and often no GTK) build without pulling GTK/winit.
tray-icon = { version = "0.24", optional = true }
winit = { version = "0.30", optional = true }

[features]
# Build the desktop tray companion (`RMD_TRAY=1` then activates it).
tray = ["dep:tray-icon", "dep:winit"]
# Host->viewer Opus audio (pulls the C libopus codec). Off by default so the
# stock build is pure Rust; `RMD_AUDIO=1` then activates it at runtime.
audio = ["rmd-session/audio"]
