[package]
name = "rmd-rendezvous"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ReachMyDevice rendezvous — self-hostable signaling + device registry + web console (untrusted for session content)."
repository.workspace = true

# Debian package: `cargo deb -p rmd-rendezvous`. Ships the binary + docs;
# most deployments run the container (deploy/Dockerfile) behind a TLS proxy.
[package.metadata.deb]
maintainer = "Brainwires <viipe.com@gmail.com>"
section = "net"
priority = "optional"
extended-description = """\
The ReachMyDevice rendezvous server: WebSocket signaling relay, account/device \
registry, stateless direct-pairing mailbox, and web console. It never sees \
session plaintext (media + control are E2E-encrypted host to viewer)."""

[[bin]]
name = "rmd-rendezvous"
path = "src/main.rs"

[dependencies]
rmd-protocol.workspace = true
rmd-entitlement.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["trace", "fs", "set-header"] }
tower_governor = "0.7"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
# "std" pulls in password_hash's getrandom-backed OsRng (salt + token RNG).
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
hex = "0.4"
sha2 = "0.10"
# HMAC-SHA1 for coturn `--use-auth-secret` ephemeral TURN credentials.
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
