[package]
name = "rmd-web-viewer"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "ReachMyDevice browser viewer — WASM, connects over WebRTC and decodes H.264 in the browser."
repository = "https://github.com/Brainwires/reachmydevice"

# Built with `trunk`, not the native workspace `cargo build` — hence excluded from
# the root workspace (see root Cargo.toml `exclude`). cdylib for wasm-bindgen.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared control/input wire schema (protobuf). prost is wasm-compatible; the
# build-time protox codegen runs on the host, so no protoc needed for wasm.
rmd-protocol = { path = "../../crates/protocol" }
prost = "0.13"
bytes = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "Navigator",
  "Location",
  "UrlSearchParams",
  "Url",
  "Response",
  "WebSocket",
  "BinaryType",
  "MessageEvent",
  "CloseEvent",
  "Event",
  "EventTarget",
  "MediaStream",
  "MediaStreamTrack",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcPeerConnection",
  "RtcPeerConnectionState",
  "RtcIceConnectionState",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionIceEvent",
  "RtcTrackEvent",
  "RtcRtpReceiver",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcDataChannelEvent",
  "MouseEvent",
  "WheelEvent",
  "KeyboardEvent",
  "PointerEvent",
  "TouchEvent",
  "Touch",
  "TouchList",
  "InputEvent",
  "HtmlInputElement",
  "Performance",
  "Node",
  "NodeList",
  "DomTokenList",
  "DomStringMap",
  "DomRect",
  "console",
]

# Smaller, faster wasm for release bundles.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
