[package]
name = "rmd-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
# Software H.264 for the Phase-1 pipeline (ADR-0007). openh264-sys2 builds the
# encoder from source, so no system codec library is required. VideoToolbox
# hardware backend is the next increment behind the same traits.
openh264 = "0.9"
# Fast BGRA -> I420 (encoder input) and I420 -> BGRA (decoder output).
yuvutils-rs = "0.8"
# Opus audio (host -> viewer). audiopus_sys bundles + builds libopus from source
# (C, via CMake), so it is gated behind the optional `audio` feature — the default
# build is pure Rust. See lib.rs / docs/decisions.md.
audiopus = { version = "0.3.0-rc.0", optional = true }

[features]
default = []
# Opus audio codec (pulls in the C libopus build via audiopus_sys + CMake).
audio = ["dep:audiopus"]
