[package]
name = "rmd-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
# Software H.264 for the Phase-1 pipeline (ADR-0007). openh264-sys2 builds the
# encoder from source, so no system codec library is required. VideoToolbox
# hardware backend is the next increment behind the same traits.
openh264 = "0.9"
# Fast BGRA -> I420 (encoder input) and I420 -> BGRA (decoder output).
yuvutils-rs = "0.8"
# SIMD BGRA crop+scale for host-side digital zoom (see scale.rs). Pure Rust.
fast_image_resize = "5"
# Opus audio (host -> viewer). audiopus_sys bundles + builds libopus from source
# (C, via CMake), so it is gated behind the optional `audio` feature — the default
# build is pure Rust. See lib.rs / docs/decisions.md.
audiopus = { version = "0.3.0-rc.0", optional = true }
# Pure-Rust AV1 encoder (rav1e). Opt-in: it is a large dependency and AV1 decode
# is browser-only (no pure-Rust AV1 decoder with a library API exists), so this is
# host-side encode for browser viewers. `asm` needs nasm at build time; keep it
# off by default so the crate builds toolchain-free, and turn it on for releases.
rav1e = { version = "0.8", optional = true, default-features = false, features = [
    "threading",
    "asm",
] }

[features]
default = []
# Opus audio codec (pulls in the C libopus build via audiopus_sys + CMake).
audio = ["dep:audiopus"]
# Pure-Rust AV1 encode (rav1e). Host-side; browsers decode it. See av1.rs.
av1 = ["dep:rav1e"]

[[example]]
name = "av1_bench"
path = "examples/av1_bench.rs"
required-features = ["av1"]
