[package]
publish = false  # internal workspace member; path-dep, never published to crates.io
name = "rmd-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmd-protocol.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# macOS input injection via CGEvent. `highsierra` enables new_scroll_event.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"

# Linux input injection via the XTEST extension (x11rb).
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest"] }

[[example]]
name = "input_smoke"
path = "examples/input_smoke.rs"
