[package]
name = "rmd-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
# Pure-Rust protobuf compiler — replaces the `protoc` C++ binary so the default
# build needs no system toolchain (part of the v0.2 de-C effort).
protox.workspace = true
