[package]
name = "openreach-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
openreach-protocol.workspace = true
openreach-transport.workspace = true
openreach-capture.workspace = true
openreach-codec.workspace = true
openreach-input.workspace = true
bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Device identity keypair (TOFU).
ed25519-dalek = "2"
getrandom = "0.2"
sha2 = "0.10"
hex = "0.4"

# Rendezvous WebSocket signaling client (runs on its own current-thread runtime).
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures = { workspace = true }

# Blocking REST client for the rendezvous account/device API (account.rs). Kept
# light: ureq is a small synchronous HTTP client; base64 is only for Basic auth.
ureq = { version = "2", features = ["json", "tls"] }
base64 = "0.22"

[[example]]
name = "headless_viewer"
path = "examples/headless_viewer.rs"

[[example]]
name = "rzv_relay_check"
path = "examples/rzv_relay_check.rs"

[dev-dependencies]
# Start the rendezvous server in-process for the end-to-end signaling test.
openreach-rendezvous = { path = "../../apps/rendezvous" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
