[package]
publish = false  # internal workspace member; path-dep, never published to crates.io
name = "rmd-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Optional host->viewer Opus audio: pulls the C libopus codec (rmd-codec/audio)
# plus cpal for device capture/playback. Default build is pure Rust.
audio = ["dep:cpal", "rmd-codec/audio"]

[dependencies]
rmd-protocol.workspace = true
rmd-transport.workspace = true
rmd-capture.workspace = true
rmd-codec.workspace = true
rmd-input.workspace = true
bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Device identity keypair (TOFU). `zeroize` wipes the signing key on drop.
ed25519-dalek = { version = "2", features = ["zeroize"] }
getrandom = "0.2"
sha2 = "0.10"
hex = "0.4"
# Encrypt the identity key at rest: Argon2id KDF over a passphrase +
# XChaCha20-Poly1305 AEAD; `zeroize` scrubs seed/key buffers from memory.
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
zeroize = "1"

# Direct device pairing (Workstream B): SPAKE2 PAKE for remote enrollment over a
# short code, HKDF for the QR seed-transfer key derivation, qrcode to present the
# pairing ticket (terminal QR for headless hosts; the viewer renders an image).
spake2 = "0.4"
hkdf = "0.12"
qrcode = { version = "0.14", default-features = false }

# Cross-platform clipboard (macOS NSPasteboard, Linux X11) for clipboard sync.
arboard = "3"

# Cross-platform audio capture + playback (CoreAudio / ALSA) for the optional
# host -> viewer Opus stream. Behind the `audio` feature (default off) since it
# pairs with the C libopus codec; see audio.rs.
cpal = { version = "0.15", optional = true }

# Rendezvous WebSocket signaling client (runs on its own current-thread runtime).
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures = { workspace = true }

# Blocking REST client for the rendezvous account/device API (account.rs). Kept
# light: ureq is a small synchronous HTTP client; base64 is only for Basic auth.
ureq = { version = "2", features = ["json", "tls"] }
base64 = "0.22"

[[example]]
name = "audio_e2e"
path = "examples/audio_e2e.rs"
required-features = ["audio"]

[[example]]
name = "headless_viewer"
path = "examples/headless_viewer.rs"

[[example]]
name = "rzv_relay_check"
path = "examples/rzv_relay_check.rs"

[dev-dependencies]
# Start the rendezvous server in-process for the end-to-end signaling test.
rmd-rendezvous = { path = "../../apps/rendezvous" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
