[package]
publish = false  # internal workspace member; path-dep, never published to crates.io
name = "rmd-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmd-protocol.workspace = true
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Random SSRC generation for the video send track.
rand = "0.9"

# Enumerate local network interfaces to build multi-interface ICE host
# candidates when the transport socket binds to the wildcard address.
if-addrs = "0.13"

# WebRTC via the sans-IO `rtc` fork (ADR-0003), vendored as a git SUBMODULE at
# third_party/webrtc-rs-rtc and pinned to an exact commit (not a moving branch),
# so builds are offline/reproducible and the code is present locally for audit.
# The fork's master carries GCC congestion control, jitter buffer, DTLS-restart,
# etc.; everything we use (peer_connection, rtp, media, interceptor, sansio, sdp,
# shared) is re-exported from the top-level `rtc` crate.
rtc = { path = "../../third_party/webrtc-rs-rtc/rtc", package = "rtc" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
